--- a/lit_study/lit_table.tex
+++ b/lit_study/lit_table.tex
@@ -1,71 +1,54 @@
 % ?? Fix Table of literature
 % https://docs.google.com/spreadsheets/d/1jw2rWzO23fUF4sSDTCzJE1Sc9mvNLo3NGZaDicredc8/edit#gid=1305340631
-
+% Excel to latex: https://www.tablesgenerator.com/latex_tables
 
 \newpage % or \pagebreak
 
 \begin{landscape}
-    \begin{tiny}
 
-% \begin{table}[!h]
-%     \mytable
-%     \caption{Performance of the unconstrained segmental Bayesian model on TIDigits1 over iterations in which the reference set is refined.}
-%     \begin{tabularx}{\linewidth}{@{}lCCCCC@{}}
-%         \toprule
-%         Metric     & 1 & 2 & 3 & 4 & 5 \\
-%         \midrule
-%         WER (\%)                        & $35.4$ & $23.5$ & $21.5$ & $21.2$ & $22.9$ \\
-%         Average cluster purity (\%)       & $86.5$ & $89.7$ & $89.2$ & $88.5$ & $86.6$ \\
-%         Word boundary $F$-score (\%)         & $70.6$ & $72.2$ & $71.8$ & $70.9$ & $69.4$ \\
-%         Clusters covering 90\% of data   & 20             & 13 & 13 & 13 & 13 \\
-%         \bottomrule
-%     \end{tabularx}
-%     \label{tbl:exemplars}
-% \end{table}
-
-\begin{table}[!htbp]
-    \renewcommand{\arraystretch}{1.1}
-    \centering
-    \caption{Summary of literature considered regarding swing damping control of multirotors with suspended payloads}
-    \begin{tabularx}{\linewidth}{@{}lllllllllll@{}}
-        \toprule
-            \textbf{Author}              & \textbf{Year}                   & \textbf{Proposed}          & \textbf{Baseline}      & \textbf{Plant model} & \textbf{Parameter} & \textbf{Unknown} & \textbf{Unmeasured} & \textbf{Different} & \textbf{Practical} & \textbf{Outdoor} \\
-        \midrule
-            \citet{Muthusamy2021}       & \citeyear{Muthusamy2021}       & \gls{BFBEL}                & -                      & none                 & yes                & yes              & yes                 &                    & yes                &                  \\
-            \citet{Hua2021}              & \citeyear{Hua2021}              & \gls{RL} (nonlinear)       & \gls{BS}, Energy-based & none                 & yes                & yes              &                     &                    & yes                &                  \\
-            \citet{Allahverdy2021}       & \citeyear{Allahverdy2021}       & \gls{BISMC} with \gls{ILC} & -                      & non-linear           & yes                & yes              &                     &                    &                    &                  \\
-            \citet{Faust2014}            & \citeyear{Faust2014}            & \gls{RL} (\gls{CAFVI})     & -                      & none                 & yes                & yes              &                     &                    & yes                &                  \\
-            \citet{Wang2020}             & \citeyear{Wang2020}             & \gls{ADRC}                 & -                      & linear               & yes                & yes              & yes                 &                    & yes                & yes              \\
-            \citet{Taylor2020}           & \citeyear{Taylor2020}           & \gls{H-inf} loop-shaping   & \gls{LQR}              & linear               & yes                &                  &                     & yes                &                    &                  \\
-            \citet{Erasmus2020}          & \citeyear{Erasmus2020}          & \gls{MRAC}                 & \gls{LQR}              & linear               & yes                &                  & yes                 & yes                & yes                & yes              \\
-            \citet{Slabber2020}          & \citeyear{Slabber2020}          & \gls{LQR}                  &                        & linear               & yes                &                  &                     & yes                &                    &                  \\
-            \citet{Dai2014}              & \citeyear{Dai2014}              & \gls{RCAC}                 & -                      & non-linear           & yes                &                  &                     &                    &                    &                  \\
-            \citet{Santos2016}           & \citeyear{Santos2016}           & \gls{MPC}                  & -                      & linear               & yes                &                  &                     &                    &                    &                  \\
-            \citet{Andrade2016}          & \citeyear{Andrade2016}          & \gls{MPC}                  & \gls{LQR}              & linear               & yes                &                  &                     &                    &                    &                  \\
-            \citet{Zurn2016}             & \citeyear{Zurn2016}             & \gls{MPC}                  & -                      & linear               &                    &                  &                     &                    & yes                &                  \\
-            \citet{Son2019}              & \citeyear{Son2019}              & \gls{MPC}                  & -                      & linear               &                    &                  &                     &                    & yes                &                  \\
-            \citet{Son2018}              & \citeyear{Son2018}              & \gls{MPC}                  & -                      & linear               &                    &                  &                     &                    & yes                &                  \\
-            \citet{Son2017}              & \citeyear{Son2017}              & \gls{MPC}                  & -                      & linear               &                    &                  &                     &                    &                    &                  \\
-            \citet{Trachte2014}          & \citeyear{Trachte2014}          & \gls{MPC}                  & \gls{LQR}              & non-linear           &                    &                  &                     &                    &                    &                  \\
-            \citet{Trachte2015}          & \citeyear{Trachte2015}          & \gls{MPC}                  & \gls{LQR}              & non-linear           &                    &                  &                     &                    &                    &                  \\
-            \citet{Liang2021}            & \citeyear{Liang2021}            & Nonlinear                  & \gls{LQR}, \gls{PD}    & non-linear           &                    &                  &                     & yes                & yes                &                  \\
-            \citet{Zeng2019a}            & \citeyear{Zeng2019a}            & Geometric                  & -                      & non-linear           &                    &                  &                     &                    &                    &                  \\
-            \citet{Yang2018}             & \citeyear{Yang2018}             & \gls{RISE}                 & -                      & non-linear           &                    &                  &                     &                    &                    &                  \\
-            \citet{Martinez-Vasquez2020} & \citeyear{Martinez-Vasquez2020} & \gls{SMC}                  & -                      & linear               &                    &                  &                     &                    &                    &                  \\
-            \citet{Mosco-Luciano2020}    & \citeyear{Mosco-Luciano2020}    & \gls{BS}                   & -                      & linear               &                    &                  &                     &                    & yes                &                  \\
-            \citet{Rigatos2018}          & \citeyear{Rigatos2018}          & \gls{H-inf}                & -                      & linear               &                    &                  &                     &                    &                    &                  \\
-            \citet{Alothman2015}         & \citeyear{Alothman2015}         & \gls{LQR}                  & \gls{PD}               & linear               &                    &                  &                     &                    &                    &                  \\
-            \citet{Alothman2016}         & \citeyear{Alothman2016}         & \gls{iLQR}                 & \gls{LQR}              & linear               &                    &                  &                     &                    &                    &                  \\
-        \bottomrule
-    \end{tabularx}
-    \label{tbl:lit}
-\end{table}
+    \begin{table}[!htbp]
+        \scriptsize
+        \renewcommand{\arraystretch}{1.4}
+        \centering
+        \caption{Summary of literature considered regarding the swing damping control of multirotors with suspended payloads}
+        \begin{tabularx}{\linewidth}{@{}lllllcccccc@{}}
+            \toprule
+            \textbf{Author}              & \textbf{Year}                   & \textbf{\begin{tabular}[c]{@{}l@{}}Proposed\\ controller\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Baseline\\ controller\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Plant\\ model\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Parameter\\ uncertainty\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Unknown\\ dynamics\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Different \\ payloads\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Practical\\ data\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Outdoor\\ experiments\end{tabular}} \\ 
+            \midrule
+            \citet{Muthusamy2021}        & \citeyear{Muthusamy2021}        & \gls{BFBEL}                                                            & PID                                                                    & -                                                              & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Allahverdy2021}       & \citeyear{Allahverdy2021}       & \gls{BISMC} with \gls{ILC}                                             & -                                                                      & non-linear                                                     & \ding{51}                                                                & \ding{51}                                                           &                                                                        &                                                                   &                                                                        \\
+            \citet{Faust2014}            & \citeyear{Faust2014}            & \gls{RL} (\gls{CAFVI})                                                 & -                                                                      & -                                                              & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Wang2020}             & \citeyear{Wang2020}             & Double \gls{ADRC}                                                      & PID                                                                    & linear                                                         & \ding{51}                                                                & \ding{51}                                                           &                                                                        & \ding{51}                                                         & \ding{51}                                                              \\
+            \citet{Hua2021}              & \citeyear{Hua2021}              & \gls{RL} (non-linear)                                                   & \gls{BS}, \gls{EB}                                                     & non-linear                                                     & \ding{51}                                                                &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Taylor2020}           & \citeyear{Taylor2020}           & \gls{H-inf} loop-shaping                                               & \gls{LQR}                                                              & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              &                                                                   &                                                                        \\
+            \citet{Erasmus2020}          & \citeyear{Erasmus2020}          & \gls{MRAC}                                                             & \gls{LQR}                                                              & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              & \ding{51}                                                         & \ding{51}                                                              \\
+            \citet{Slabber2020}          & \citeyear{Slabber2020}          & \gls{NF} with \gls{LQR}                                                & \gls{PID}                                                              & linear                                                         & \ding{51}                                                                &                                                                     & \ding{51}                                                              &                                                                   &                                                                        \\
+            \citet{Dai2014}              & \citeyear{Dai2014}              & \gls{RCAC}                                                             & -                                                                      & non-linear                                                     & \ding{51}                                                                &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Santos2016}           & \citeyear{Santos2016}           & \gls{MPC}                                                              & -                                                                      & linear                                                         & \ding{51}                                                                &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Andrade2016}          & \citeyear{Andrade2016}          & \gls{MPC}                                                              & \gls{LQR}                                                              & linear                                                         & \ding{51}                                                                &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Zurn2016}             & \citeyear{Zurn2016}             & \gls{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Son2019}              & \citeyear{Son2019}              & \gls{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Son2018}              & \citeyear{Son2018}              & \gls{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Son2017}              & \citeyear{Son2017}              & \gls{MPC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Trachte2014}          & \citeyear{Trachte2014}          & \gls{MPC}                                                              & \gls{LQR}                                                              & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Trachte2015}          & \citeyear{Trachte2015}          & \gls{MPC}                                                              & \gls{LQR}                                                              & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Liang2021}            & \citeyear{Liang2021}            & non-linear                                                              & \gls{LQR}, \gls{PD}                                                    & non-linear                                                     &                                                                          &                                                                     & \ding{51}                                                              & \ding{51}                                                         &                                                                        \\
+            \citet{Zeng2019a}            & \citeyear{Zeng2019a}            & Geometric                                                              & -                                                                      & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Yang2018}             & \citeyear{Yang2018}             & \gls{RISE}                                                             & -                                                                      & non-linear                                                     &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Martinez-Vasquez2020} & \citeyear{Martinez-Vasquez2020} & \gls{SMC}                                                              & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Mosco-Luciano2020}    & \citeyear{Mosco-Luciano2020}    & \gls{BS}                                                               & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        & \ding{51}                                                         &                                                                        \\
+            \citet{Rigatos2018}          & \citeyear{Rigatos2018}          & \gls{H-inf}                                                            & -                                                                      & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Alothman2015}         & \citeyear{Alothman2015}         & \gls{LQR}                                                              & \gls{PD}                                                               & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \citet{Alothman2016}         & \citeyear{Alothman2016}         & \gls{iLQR}                                                             & \gls{LQR}                                                              & linear                                                         &                                                                          &                                                                     &                                                                        &                                                                   &                                                                        \\
+            \bottomrule
+        \end{tabularx}
+        \label{tbl:lit}
+    \end{table}
 
 % Add \\ to last line otherwise error.
 % Use tabularx
 % ?? Remove year column to save space
 % ?? Added acronyms full
 
-    \end{tiny}
 \end{landscape}
 
