--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -150,6 +150,7 @@
 
 % Random
 \usepackage{pdflscape} % make landscape page with \begin{landscape} ... \end{landscape}
+\usepackage{pifont} % for checkmark: \ding{52}
 
 % Editing
 \usepackage{xcolor}
