--- a/system_id/havok.tex
+++ b/system_id/havok.tex
@@ -4,7 +4,7 @@
     \paragraph
     \gls{HAVOK} is a data-driven, regression technique that provides a different approximation
     of the Koopman operator than \gls{DMD} \cite{Brunton2017a, Champion2019}. 
-    The Koopman operator is a method of representing finite-dimensional nonlinear dynamics
+    The Koopman operator is a method of representing finite-dimensional non-linear dynamics
     in terms of an infinite-dimensional linear operator \cite{Brunton2017a}.
     However, an infinite-dimensional linear operator is not very useful for practical implementation.
     \gls{DMD} provides a limited approximation of the Koopman operator, because it is based on linear measurements only.
