--- a/system_id/param_estimation.tex
+++ b/system_id/param_estimation.tex
@@ -68,10 +68,10 @@
     % \end{bmatrix}, \mbox{ and} \\
 
     \paragraph
-    It is assumed that the coefficient of friction, $c$, does not change for different payload, therefore this parameter can be determine experimentally and will known prior to flight.
+    It is assumed that the coefficient of friction, $c$, does not change for different payload, therefore this parameter can be determine experimentally and will known before a flight.
     Furthermore, it is assumed that $m_Q$ is known.
     The payload parameters, 
-    $m_p$ and $l$, are unknown prior to flight. 
+    $m_p$ and $l$, are unknown before a flight. 
     These parameters will be estimated in the sections below.    
 
 \subsection{Payload mass estimation}
